Angular: Solve overlapping footer

--- a/frontend/web/src/styles.scss
+++ b/frontend/web/src/styles.scss
@@ -13,7 +13,7 @@
 
 /* Common styles*/
 .page-container {
-    height: 100vh;
+    min-height: 100vh;
     color: #101C28;
     background: #E8F1F8;
     padding: 2rem;
